Envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                     # UI DOMAIN
                    - name: nexus_routes_ui
                      domains: ["repo.deployacademy.ir"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nexus_ui }
                        - match: { prefix: "/v2/" }
                          route: { cluster: nexus_ui }

                    - name: nexus_routes_pub
                      domains: ["pub.deployacademy.ir"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nexus_pub }
                        - match: { prefix: "/v2/" }
                          route: { cluster: nexus_pub }

                http_filters:
                  - name: envoy.filters.http.header_to_metadata
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /var/log/envoy/access.log
                      log_format:
                        text_format: "%START_TIME% %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %RESPONSE_CODE% %BYTES_RECEIVED% %BYTES_SENT%\n"
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/certs/repo_fullchain.pem
                    private_key:
                      filename: /etc/envoy/certs/repo_privkey.pem
                  - certificate_chain:
                      filename: /etc/envoy/certs/pub_fullchain.pem
                    private_key:
                      filename: /etc/envoy/certs/pub_privkey.pem

                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                    # tls_maximum_protocol_version: TLSv1_3
                  cipher_suites:
                    - ECDHE-ECDSA-AES256-GCM-SHA384
                    - ECDHE-RSA-AES256-GCM-SHA384
                    - ECDHE-ECDSA-CHACHA20-POLY1305
                    - ECDHE-RSA-CHACHA20-POLY1305
                    - ECDHE-ECDSA-AES128-GCM-SHA256
                    - ECDHE-RSA-AES128-GCM-SHA256

    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http_redirect
                route_config:
                  name: redirect_route
                  virtual_hosts:
                    - name: redirect_repo
                      domains: ["repo.deployacademy.ir"]
                      routes:
                        - match: { prefix: "/" }
                          redirect: { https_redirect: true }
                        - match: { prefix: "/v2/" }
                          redirect: { https_redirect: true }

                    - name: redirect_pub
                      domains: ["pub.deployacademy.ir"]
                      routes:
                        - match: { prefix: "/" }
                          redirect: { https_redirect: true }
                        - match: { prefix: "/v2/" }
                          redirect: { https_redirect: true }
                http_filters:
                   - name: envoy.filters.http.header_to_metadata
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: nexus_ui
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: nexus_ui
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nexus
                      port_value: 8081
    - name: nexus_pub
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: nexus_pub
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nexus
                      port_value: 8082

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
